cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: AWS-Study-Template

Resources:
  vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: aws-study-vpc

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref vpc
      AvailabilityZone: ap-northeast-1a
      Tags:
       - Key: Name
         Value: subnet1

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref vpc
      AvailabilityZone: ap-northeast-1c
      Tags:
       - Key: Name
         Value: subnet2

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
       - Key: Name
         Value: aws-study-route
  RouteInternet:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Internetgateway
      RouteTableId: !Ref RouteTable
  RouteLocal:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet1

  Internetgateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: aws-study-gateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref Internetgateway
      VpcId: !Ref vpc

  NetworkACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref vpc
  ACLEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref NetworkACL
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  Subnet1ACL:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Subnet1
      NetworkAclId: !Ref NetworkACL
  Subnet2ACL:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Subnet2
      NetworkAclId: !Ref NetworkACL

  SecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS-Study-EC2
      VpcId: !Ref vpc
      SecurityGroupEgress:
       - IpProtocol: -1
         CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 3000
        ToPort: 3000
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: aws-study-securitygroup-ec2
  SecurityGroupRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS-Study-RDS
      VpcId: !Ref vpc
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: !Ref SecurityGroupEC2
      Tags:
        - Key: Name
          Value: aws-study-securitygroup-rds

  EC2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-northeast-1a
      DisableApiTermination: false
      ImageId: ami-00a5245b4816c38e6
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t2.micro
      KeyName: wakayama
      Monitoring: false
      SecurityGroupIds:
        - !Ref SecurityGroupEC2
      SubnetId: !Ref Subnet1
      Tags:
        - Key: Name
          Value: aws-study-ec2

  RDS:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 1
      DBInstanceClass: db.t2.micro
      DBName: association_tutorial
      VPCSecurityGroups:
       - !Ref SecurityGroupRDS
      DBSubnetGroupName: !Ref DBSubnetGroup
      DeleteAutomatedBackups: true
      DeletionProtection: false
      EnablePerformanceInsights: false
      Engine: mysql
      EngineVersion: 8.0.13
      LicenseModel: General-Public-License
      MasterUsername: root
      MasterUserPassword: shaining24
      MultiAZ: false
      Port: 3306
      PreferredBackupWindow: 16:24-16:54
      PreferredMaintenanceWindow: sun:18:00-sun:19:00
      Tags:
        - Key: Name
          Value: aws-study-rds
  DBSubnetGroup:
         Type: AWS::RDS::DBSubnetGroup
         Properties:
           DBSubnetGroupDescription: Created from the RDS Management Console
           SubnetIds:
             - !Ref Subnet1
             - !Ref Subnet2

  ELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: aws-study-elb
      SecurityGroups:
       - !Ref SecurityGroupEC2
      Subnets:
        - !Ref Subnet1
        - !Ref Subnet2
      Type: application
      Tags:
        - Key: Name
          Value: aws-study-elb

  ELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: 200
      Name: aws-study-elb-target-group
      Port: 80
      Protocol: HTTP
      Targets:
        - Id: !Ref EC2
          Port: 80
      VpcId: !Ref vpc
      Tags:
        - Key: Name
          Value: aws-study-elb-target-group

  ELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref ELBTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ELB
      Port: 80
      Protocol: HTTP
